initial commit password reset backend

--- a/ihris-backend/views/welcome.handlebars
+++ b/ihris-backend/views/welcome.handlebars
@@ -6,6 +6,6 @@
     </head>
     <body>
         <p>Hi {{name}},</p>
-        <p>You OTP is {{OTP}} </p>
+        <p>Welcome to your new account</p>
     </body>
 </html>
