--- a/ihris-backend/views/resetPassword.handlebars
+++ b/ihris-backend/views/resetPassword.handlebars
@@ -6,6 +6,6 @@
     </head>
     <body>
         <p>Hi {{name}},</p>
-        <p>You OTP is {{OTP}} </p>
+        <p>Your password has been changed successfully</p>
     </body>
 </html>
