fixed verfiy otp issue

--- a/ihris-backend/views/email.handlebars
+++ b/ihris-backend/views/email.handlebars
@@ -7,5 +7,6 @@
     <body>
         <p>Hi {{name}},</p>
         <p>You OTP is {{otp}} </p>
+        <p>Note: Your OTP value will expire immediately after verification </p>
     </body>
 </html>
